# varta

./: .gitignore  Cargo.toml  LICENSE  README.md
examples/: storage_example.rs
src/: agent.rs  common.rs  config.rs  device.rs  lib.rs  main.rs  operation.rs  session.rs  vault.rs  vault_object.rs
src/backup/: backup.rs  mod.rs
src/cli/: cli.rs  handlers.rs  mod.rs
src/crypto/: mod.rs  sign.rs  symm_enc.rs
src/crypto/device/: keychain.rs  mod.rs  oracle.rs
src/os/: mod.rs  os.rs
src/os/mac/: keychain.rs
src/os/windows/: keychain.rs
src/storage/: mod.rs  obs.rs  ops.rs  storage.rs
src/storage/components/: block.rs  block_header.rs  header.rs  index.rs  mod.rs  object.rs  operation.rs
tests/: crypto_tests.rs  device_tests.rs  integration_tests.rs
