[package]
name = "varta"
version = "0.5.0"
edition = "2024"

[lib]
name = "varta"
path = "src/lib.rs"

[dependencies]
borsh = { version = "1.5", features = ["derive"] }
rand = "0.8"
hkdf = "0.12"
x25519-dalek = { version = "2", features = ["static_secrets"] }
sha2 = "0.10"
aes-gcm = "0.10"
aes-siv = "0.7"
chacha20poly1305 = { version = "0.10", features = ["std"] }
hex = "0.4"
base64 = "0.21"
hmac = "0.12"
ed25519-dalek = "2"
pqcrypto-traits = "0.3" 
pqcrypto-dilithium = "0.5"
zeroize = { version = "1.7", features = ["derive"] }
once_cell = "1.19"
colored = "2.1"
rpassword = "7.3"

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "2.9"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.52", features = ["Win32_Security_Credentials"] }
